# onetee

./: .gitignore  generate-env.sh
.github/workflows/: cicd.yml  (+1 more)
admin_panel/: README.md  index.html  package-lock.json  package.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  run_tests.sh
backend/api/: config.py  main.py
backend/auth/: deps.py  router.py  schemas.py  security.py  service.py
backend/community/: minio_client.py  router.py  schemas.py
backend/community/models/: __init__.py  media_hashtag.py  notification.py  post.py  social.py  thread.py  user.py
backend/community/services/: community_service.py
backend/database/: __init__.py
backend/marketplace/: __init__.py  models.py  router.py  schemas.py  service.py
backend/marketplace/admin/: router.py
backend/migrations/: env.py
backend/migrations/versions/: 317deb2ec883_add_auth_fields_to_user.py  5bdc258544f5_added_product_collection_table.py  7c9f0f9b3d1a_add_shop_and_user_verified.py  a1115c7b7af3_merge_product_collection_and_thread_.py  c4714617ddef_rename_posts_to_threads.py  dc1a03449571_init_community_tables.py
backend/storage/: minio_service.py
backend/tests/: conftest.py  test_auth.py  test_basic.py  test_community.py  test_main.py  test_marketplace.py  test_security.py  test_summary.py
docker/: check_db.sh  docker-compose.yml
docs/: README.md  admin.md  auth.md  community.md  developer.md  shop.md
frontend/: .dockerignore  .env.example  COMING_SOON_SETUP.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
(+168 files in other folders)
